# oterminus

./: .env.example  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml
docs/: adding-command-families.md  contributing.md  docusaurus-migration-plan.md  dogfooding-playbook.md  index.md  release.md
docs/adr/: 0001-capability-first-not-shell-first.md  0002-structured-first-planning.md  0003-router-before-planner.md  0004-network-diagnostics-boundary.md  0005-project-health-executes-local-code.md
docs/architecture/: capability-system.md  command-registry.md  evals.md  execution.md  observability.md  overview.md  request-lifecycle.md  routing-and-planning.md  structured-rendering.md  validation-and-policy.md
docs/product/: policy-modes.md  (+4 more)
scripts/: check_docs_links.py  generate_command_reference.py  validate_package_install.py
tests/: test_ambiguity.py  test_audit_privacy.py  test_auto_execute.py  test_check_docs_links.py  test_cli_end_to_end.py  test_cli_smoke.py  test_command_registry.py  test_completion.py  test_config.py  test_config_cli.py  test_deterministic_shortcuts.py  test_direct_commands.py  test_discovery.py  test_doctor.py  test_evals.py  test_executor.py  test_failure_explanation.py  test_generate_command_reference.py  test_history_persistence.py  test_local_planner.py  test_ollama_client.py  test_onboarding.py  test_packaging.py  test_planner_parsing.py  test_planner_routing.py  test_registry_integrity.py  test_release_smoke.py  test_renderer.py  test_router.py  test_setup.py  test_shell_completion.py  test_structured_commands.py  test_terminal_style.py  test_validator.py  test_version.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+100 files in other folders)
